# f1-rest-api

./: README.md  pyproject.toml
f1_api/: app.py  data_provider.py
f1_api/lib/: Circuits.py  Constructors.py  Drivers.py  Races.py
f1_api/routes/: circuits.py  constructors.py  drivers.py  races.py
