[tool.poetry]
name = "f1-api"
version = "0.1.0"
description = ""
authors = ["Victor Sampaio <vsampaio@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
